--- a/aboutus.html
+++ b/aboutus.html
@@ -29,16 +29,16 @@
             <div class="collapse navbar-collapse" id=navbar>
                 <ul class="navbar-nav mr-auto ">
                     <li class="nav-item active">   
-                        <a class="nav-link" href="#"><span class="fa fa-home"></span> Home</a>
+                        <a class="nav-link" href="/"><span class="fa fa-home"></span> Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./aboutus.html"><span class="fa fa-info"></span> About</a>
+                        <a class="nav-link" href="#"><span class="fa fa-info"></span> About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><span class="fa fa-list"></span> Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><span class="fa fa-address"></span> Contact</a>
+                        <a class="nav-link" href="/contactus.html"><span class="fa fa-address"></span> Contact</a>
                     </li>
                 </ul>
             </div>
@@ -47,11 +47,12 @@
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
-                <div class="col-12 col-sm-6">
+                <div class="col-12 col-sm-8">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class="col-12 col-sm align-self-center">
+                    <img src="img/logo.png" class="img-fluid mx-auto">
                 </div>
             </div>
         </div>
