--- a/index.html
+++ b/index.html
@@ -47,13 +47,16 @@
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
-                <div class="col-12 col-sm-8">
+                <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our
                         lipsmacking creations will tickle your culinary senses!</p>
                 </div>
+                <div class="col-12 col-sm align-self-center justify-content-center">
+                    <img src="img/logo.png" class="img-fluid">
+                </div>
                 <div class="col-12 col-sm align-self-center">
-                    <img src="img/logo.png" class="img-fluid mx-auto">
+                    <a class="btn btn-warning" href="#reserve">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -68,8 +71,10 @@
                 <div class="media">
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="uthapizza">
                     <div class="media-body">
-                        <h2 class="mt-0">Uthappizza</h2>
-                        <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola
+                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">Hot</span> <span
+                                class="badge badge-pill badge-secondary">$4.99</span></h2>
+                        <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian
+                            pizza, topped with Cerignola
                             olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
                     </div>
 
@@ -84,10 +89,18 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers,
-                    six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just
-                    $19.99 per person </p>
+                <div class="media">
+                    <div class="media-body">
+                        <h2>Weekend Grand Buffet <span class="badge badge-danger">New</span></h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five
+                            different salads, six enticing
+                            appetizers,
+                            six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for
+                            just
+                            $19.99 per person </p>
+                    </div>
+                    <img class="img-thumbnail mr-3" src="img/buffet.png">
+                </div>
             </div>
         </div>
 
@@ -100,14 +113,65 @@
                     <img class="mr-3 img-thumbnail align-self-center" src="img/alberto.png" alt="alberto">
                     <div class="media-body">
                         <h2>Alberto Somayya</h2>
-                <h4>Executive Chef</h4>
-                <p>Award winning three-star Michelin chef with wide International experience having worked closely with
-                    whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion
-                    experiences. </p>
+                        <h4>Executive Chef</h4>
+                        <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International
+                            experience having worked
+                            closely with
+                            whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion
+                            experiences. </p>
                     </div>
 
                 </div>
-                
+
+            </div>
+        </div>
+        <div class="row row-content">
+            <div class="col-12 col-sm-8 mx-auto">
+                <div class="card">
+                    <div class="card-header bg-warning">
+                        Reserve Seat
+                    </div>
+                    <form class="card-body form-horizontal">
+                        <div class="row">
+                            <div class="col-12 col-sm-2">Number of Guests</div>
+                            <div class="col-12 col-sm-10">
+                                <span class="mr-4">
+                                    <input id="s1" type="radio" name="seats">
+                                    <label for="s1" class="radio-inline ">1</label>
+                                </span>
+                                <span class="mr-4">
+                                    <input id="s2" type="radio" name="seats">
+                                    <label for="s2" class="radio-inline ">2</label>
+                                </span class="mr-2">
+                                <span class="mr-4">
+                                    <input id="s3" type="radio" name="seats">
+                                    <label for="s3" class="radio-inline ">3</label>
+                                </span>
+                                <span class="mr-4">
+                                    <input id="s4" type="radio" name="seats">
+                                    <label for="s4" class="radio-inline ">4</label>
+                                </span>
+                                <span class="mr-4">
+                                    <input id="s5" type="radio" name="seats">
+                                    <label for="s5" class="radio-inline ">5</label>
+                                </span>
+                                <span class="mr-4">
+                                    <input id="s6" type="radio" name="seats">
+                                    <label for="s6" class="radio-inline ">6</label>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="row mt-5">
+                            <div class="col-12 col-sm-2">Date and Time</div>
+                            <div class="col-12 col-sm-10">
+                                <div class="form-group">
+                                    <input name="date" id="date" placeholder="Date" type="date">
+                                    <input name="time" id="time" placeholder="time" type="time">
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
@@ -147,7 +211,7 @@
                                 class="fa fa-twitter"></i></a>
                         <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i
                                 class="fa fa-youtube"></i></a>
-                        <a class="btn btn-social-icon" href="mailto:confusion@food.net"><i
+                        <a class="btn btn-social-icon btn-facebook" href="mailto:confusion@food.net"><i
                                 class="fa fa-envelope-o"></i></a>
                     </div>
                 </div>
