--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <a class="nav-link" href="#"><span class="fa fa-list"></span> Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contactus.html"><span class="fa fa-address"></span> Contact</a>
+                        <a class="nav-link" href="/contactus.html"><span class="fa fa-address-card"></span> Contact</a>
                     </li>
                 </ul>
             </div>
