--- a/index.html
+++ b/index.html
@@ -60,12 +60,14 @@
                     <form>
                         <div class="form-row">
                             <div class="form-group col-sm-4">
-                                    <label class="sr-only" for="exampleInputEmail3">Email address</label>
-                                    <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Enter email">
+                                <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                                <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3"
+                                    placeholder="Enter email">
                             </div>
                             <div class="form-group col-sm-4">
                                 <label class="sr-only" for="exampleInputPassword3">Password</label>
-                                <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3" placeholder="Password">
+                                <input type="password" class="form-control form-control-sm mr-1"
+                                    id="exampleInputPassword3" placeholder="Password">
                             </div>
                             <div class="col-sm-auto">
                                 <div class="form-check">
@@ -76,8 +78,9 @@
                             </div>
                         </div>
                         <div class="form-row">
-                            <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
-                            <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>        
+                            <button type="button" class="btn btn-secondary btn-sm ml-auto"
+                                data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
                         </div>
                     </form>
                 </div>
@@ -96,16 +99,72 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center mt-1">
-                    <a class="btn btn-warning" href="#ReserveTable"
-                    data-toggle="tooltip" data-html="true"
-                    title="or Call us at <br> <strong>+852 12345678</strong>"
-                    data-placement="bottom">Reserve Table</a>
+                    <a class="btn btn-warning" href="#ReserveTable" data-toggle="tooltip" data-html="true"
+                        title="or Call us at <br> <strong>+852 12345678</strong>" data-placement="bottom">Reserve
+                        Table</a>
                 </div>
             </div>
         </div>
     </header>
 
     <div class="container">
+        <div class="row row-content">
+            <div class="col">
+                <div id="carousel" class="carousel slide" data-ride="carousel" data-interval="3000">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid" src="img/uthappizza.png" alt="Uthapizza">
+                            <div class="carousel-caption d-none d-sm-block">
+                                <h2>Uthappizza <span class="badge badge-danger">Hot</span> <span
+                                        class="badge badge-pill badge-secondary">$4.99</span></h2>
+                                <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
+                                    Italian
+                                    pizza, topped with Cerignola
+                                    olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo
+                                    Paneer.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="img-thumbnail mr-3" src="img/buffet.png">
+                            <div class="carousel-caption d-none d-sm-block">
+                                <h2>Weekend Grand Buffet <span class="badge badge-danger">New</span></h2>
+                                <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five
+                                    different salads, six enticing
+                                    appetizers,
+                                    six main entrees and five choicest desserts. Free flowing bubbly and soft drinks.
+                                    All for
+                                    just
+                                    $19.99 per person </p>
+                            </div>
+
+                        </div>
+                        <div class="carousel-item">
+                            <img class="mr-3 img-fluid align-self-center" src="img/alberto.png" alt="alberto">
+                            <div class="carousel-caption d-none d-sm-block">
+                                <h2>Alberto Somayya</h2>
+                                <h4>Executive Chef</h4>
+                                <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International
+                                    experience having worked
+                                    closely with
+                                    whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion
+                                    experiences. </p>
+                            </div>
+                        </div>
+                    </div>
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel" data-slide-to="1"></li>
+                        <li data-target="#carousel" data-slide-to="2"></li>
+                    </ol>
+                    <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 col-md-3 order-sm-last">
                 <h3>Our Lipsmacking Culinary Creations</h3>
@@ -168,7 +227,7 @@
 
             </div>
         </div>
-        <div class="row row-content"  id="ReserveTable">
+        <div class="row row-content" id="ReserveTable">
             <div class="col-12 col-sm-8 mx-auto">
                 <div class="card">
                     <div class="card-header bg-warning">
@@ -178,38 +237,38 @@
                         <div class="form-group row">
                             <label class="col-12 col-sm-2" for="seatSelection">Number of Seats</label>
                             <div class="col-12 col-sm-10" id="seatSelection">
-                            <div  class="form-check form-check-inline">
-                                <input class="form-check-input" id="seats" type="radio" name="seats" value="1">
-                                <label class="form-check-label" for="seats">1</label>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" id="seats" type="radio" name="seats" value="1">
+                                    <label class="form-check-label" for="seats">1</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" id="seats" type="radio" name="seats" value="2">
+                                    <label class="form-check-label" for="seats">2</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" id="seats" type="radio" name="seats" value="3">
+                                    <label class="form-check-label" for="seats">3</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" id="seats" type="radio" name="seats" value="4">
+                                    <label class="form-check-label" for="seats">4</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" id="seats" type="radio" name="seats" value="5">
+                                    <label class="form-check-label" for="seats">5</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" id="seats" type="radio" name="seats" value="6">
+                                    <label class="form-check-label" for="seats">6</label>
+                                </div>
                             </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" id="seats" type="radio" name="seats" value="2">
-                                <label class="form-check-label" for="seats">2</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" id="seats" type="radio" name="seats" value="3">
-                                <label class="form-check-label" for="seats">3</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" id="seats" type="radio" name="seats" value="4">
-                                <label class="form-check-label" for="seats">4</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" id="seats" type="radio" name="seats" value="5">
-                                <label class="form-check-label" for="seats">5</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" id="seats" type="radio" name="seats" value="6">
-                                <label class="form-check-label" for="seats">6</label>
-                            </div>
-                        </div>
                         </div>
                         <div class="form-group row">
                             <div class="col-12 col-sm-2">
                                 Date and Time
                             </div>
                             <div class="col-12 col-sm-10">
-                                <div >
+                                <div>
                                     <input class="col-12 col-sm-auto mt-2" type="date" name="date" id="date">
                                     <input class="col-12 col-sm-auto mt-2" type="time" name="time" id="time">
                                 </div>
