--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
                     </div>
                     <form class="card-body">
                         <div class="form-group row">
-                            <label class="col-12 col-sm-2" for="seatSelection">Number of Seats</label>
-                            <div class="col-12 col-sm-10" id="seatSelection">
+                            <label class="col-12 col-sm-3" for="seatSelection">Number of Seats</label>
+                            <div class="col-12 col-sm-9" id="seatSelection">
                                 <div class="form-check form-check-inline">
                                     <input class="form-check-input" id="seats" type="radio" name="seats" value="1">
                                     <label class="form-check-label" for="seats">1</label>
@@ -339,10 +339,26 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="col-12 col-sm-2">
+                            <div class="col-12 col-sm-3">
+                                Section
+                            </div>
+                            <div class="col-12 col-sm-9">
+                                <div class="btn-group btn-group-toggle">
+                                    <label class="btn btn-success">
+                                        <input type="radio" name="section" value="ns" checked>Non-Smoking
+                                    </label>
+                                    <label class="btn btn-danger">
+                                        <input type="radio" name="section" value="s">Smoking
+                                    </label>
+                                </div>
+                                
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-12 col-sm-3">
                                 Date and Time
                             </div>
-                            <div class="col-12 col-sm-10">
+                            <div class="col-12 col-sm-9">
                                 <div>
                                     <input class="col-12 col-sm-auto mt-2" type="date" name="date" id="date">
                                     <input class="col-12 col-sm-auto mt-2" type="time" name="time" id="time">
@@ -350,7 +366,10 @@
                             </div>
                         </div>
                         <div class="row col-12">
-                            <button class="offset-sm-2 btn btn-primary" type="submit">Reserve</button>
+                            <div class="offset-sm-3 col-12 col-sm-9">
+                                <button class="btn btn-primary" type="submit">Reserve</button>
+                            </div>
+                            
                         </div>
                     </form>
                 </div>
